# coldstack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COLDSTACK_SKILL.md  Dockerfile  README.md  TASK_MANAGER_SKILL.md  TODOS.md  build_and_package.sh  docker-compose.yml
agent/: executor.js  index.js  package.json  prompt.js
backend/: .gitignore  Cargo.toml  tasks.db
backend/src/: db.rs  errors.rs  main.rs  models.rs  orchestration.rs  task_source.rs  workflow.rs
backend/src/adapters/: claude_code.rs  mod.rs
backend/src/handlers/: agents.rs  employees.rs  executions.rs  mod.rs  tasks.rs
done/: 20260418-175403-codex.md  20260418-180821-codex.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: workflow-golden-path.e2e.ts  workflow-mobile-sheet.e2e.ts
frontend/src/: App.tsx  index.css  types.ts  variables.css
frontend/src/components/: CompanyView.tsx  EmployeeCard.tsx  EmployeeDetail.tsx  LiveTerminal.tsx  Modal.tsx  RejectModal.tsx  TaskDetailTimeline.tsx  TasksView.tsx  TransitionActions.tsx  WorkflowBoard.tsx  WorkflowLaneGroup.tsx  WorkflowTaskCard.tsx
frontend/src/components/__tests__/: CompanyView.test.tsx  EmployeeCard.test.tsx  EmployeeDetail.test.tsx  Modal.test.tsx  RejectModal.test.tsx  TaskDetailTimeline.test.tsx  TasksView.assign.test.tsx  TasksView.mobile.test.tsx  WorkflowBoard.test.tsx  WorkflowTaskCard.test.tsx
frontend/src/lib/: executionStream.ts
mcp/: index.js  package-lock.json  package.json
