[package]
name = "coldstack-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coldstack"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
rust-embed = "8.5"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
